save one version

--- a/package/templates/mongod-config.conf.j2
+++ b/package/templates/mongod-config.conf.j2
@@ -26,7 +26,7 @@ processManagement:
 # network interfaces
 net:
   port: 20000
-  #bindIp: {{ bind_ip }}  # Listen to local interface only, comment to listen on all interfaces.
+  bindIp: {{ bind_ip }}  # Listen to local interface only, comment to listen on all interfaces.
 
 sharding:
    clusterRole: configsvr
