--- a/package/templates/mongod-config.conf.j2
+++ b/package/templates/mongod-config.conf.j2
@@ -21,4 +21,4 @@ storage:
 # how the process runs
 processManagement:
   fork: true  # fork and run in background
-  pidFilePath: /var/run/mongodb/mongod-config.pid  # location of pidfile
+  pidFilePath: /var/run/mongodb/mongod-config.pid  # location of pidfile - DO NOT CHANGE THIS
